feat: add defaultJvmArgs for javaApplication and switch to java 21 (#37)
* feat: add default jvm args for java application plugin

* also modify default to 21

* nit

* update